# vybe-check-challenge

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml  justfile  rust-toolchain.toml
data/: backup.sql
docs/: challenge-description.md
migrations/2025-03-02-041052_create_trade_fills/: down.sql  up.sql
vn-database-conn/: Cargo.toml
vn-database-conn/src/: error.rs  lib.rs  models.rs  schema.rs
vn-database-conn/tests/: db_integration_tests.rs
vn-database-core/: Cargo.toml
vn-database-core/src/: error.rs  lib.rs  models.rs  schema.rs
vn-database-core/tests/: db_integration_tests.rs
vn-dbtester/: Cargo.toml
vn-dbtester/src/: main.rs
vn-extractord/: Cargo.toml
vn-extractord-core/: Cargo.toml
vn-extractord-core/src/: error.rs  extractor.rs  lib.rs
vn-extractord-core/tests/: integration_tests.rs
vn-extractord/src/: main.rs
vn-rest-api/: Cargo.toml
vn-rest-api/src/: main.rs
