[package]
name = "vn-database-conn"
description = "Postgresql database connection crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
diesel.workspace = true
dotenvy.workspace = true

[dev-dependencies]
cargo-husky.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["rlib"]
