[package]
name = "vn-database-core"
description = "Provides a shareable interface to Postgresql/Diesel powerered database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[features]
integration_tests = []

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
diesel.workspace = true
dotenvy.workspace = true
phoenix-sdk.workspace = true

[dev-dependencies]
cargo-husky.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["rlib"]
