[package]
name = "vn-dbtester"
description = "A command line program used to read from the database and test that it is working"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vn-database-core = { path = "../vn-database-core" }
diesel.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true

[lints]
workspace = true
