[package]
name = "vn-extractord-core"
description = "Implements core functionality for the daemon service as a rust static library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vn-database-conn = { path = "../vn-database-conn" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
diesel.workspace = true
phoenix-sdk.workspace = true
futures = "0.3.31"
solana-sdk = ">=1.14.12, <1.19"
solana-client = ">=1.14.12, <1.19"
ellipsis-client = "1.0.0"
derive-getters = "0.5.0"

[dev-dependencies]
cargo-husky.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["rlib"]
