[package]
name = "vn-extractord"
description = "Vibe Network Extractor Daemon Executable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vn-extractord-core = { path = "../vn-extractord-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }

[dev-dependencies]
cargo-husky.workspace = true

[lints]
workspace = true
